--- a/.gitignore
+++ b/.gitignore
@@ -18,3 +18,10 @@ web-build/
 
 expo-env.d.ts
 # @end expo-cli
+
+#enviroment variables
+.env
+.env.local
+.env.development
+.env.test
+.env.production
